2022-11-15T01:19:50Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3466599222 # 614
* notice: last 14d: unq all: 2 8
* notice: prev accum: outdated-unq outdated-all / unq all: 247 447 / 252 453
* notice: next accum: outdated-unq outdated-all / unq all: 248 450 / 253 458
* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -0 / +2 +4 -0 -0 / 2 4
* notice: removed / changed dates: [2022-10-31] / [2022-11-14]

2022-11-14T16:22:58Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3463274208 # 613
* notice: last 14d: unq all: 1 6
* notice: prev accum: outdated-unq outdated-all / unq all: 247 447 / 252 454
* notice: next accum: outdated-unq outdated-all / unq all: 247 447 / 252 453
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +3 -0 -2 / 1 1
* notice: removed / changed dates: [] / [2022-10-31]

2022-11-14T08:21:26Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3459680977 # 612
* notice: last 14d: unq all: 1 7
* notice: prev accum: outdated-unq outdated-all / unq all: 247 447 / 251 454
* notice: next accum: outdated-unq outdated-all / unq all: 247 447 / 252 454
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-10-31 2022-11-14]

2022-11-14T01:21:00Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3457801104 # 611
* notice: last 14d: unq all: 1 7
* notice: prev accum: outdated-unq outdated-all / unq all: 239 438 / 249 452
* notice: next accum: outdated-unq outdated-all / unq all: 247 447 / 251 454
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2022-10-30] / [2022-11-13]

2022-11-13T16:21:01Z: