@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2022-11-01T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -21,6 +21,11 @@
       "timestamp": "2022-11-14T00:00:00Z",
       "count": 4,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-11-15T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
