@@ -1,3 +1,11 @@
+2022-11-15T08:20:50Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3468655275 # 615
+* notice: last 14d: unq all: 2 8
+* notice: prev accum: outdated-unq outdated-all / unq all: 248 450 / 253 458
+* notice: next accum: outdated-unq outdated-all / unq all: 248 450 / 254 458
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-11-01 2022-11-15]
+
 2022-11-15T01:19:50Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3466599222 # 614
 * notice: last 14d: unq all: 2 8
